# RlRustController

./: Cargo.toml  README.md  openocd.gdb
.cargo/: config.toml
auxiliary/: Cargo.toml
auxiliary/src/: lib.rs
src/: controller.rs  hid_report.rs  init.rs  lib.rs  main.rs
