[package]
name = "source"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
debug = true
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aux5 = { path = "auxiliary" }
usb-device = "0.2.9"
usbd-serial = "0.1.1"
stm32-usbd = "0.6.0"
cortex-m = "0.7.2"
cortex-m-rt = "0.6.14"