[package]
name = "source"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
debug = true
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
usb-device = "0.2.9"
usbd-serial = "0.1.1"
stm32-usbd = "0.6.0"
cortex-m = "0.7.2"
cortex-m-rt = "0.6.14"
stm32f3-discovery = "0.7.0"
stm32f3xx-hal = { version = "0.7.0", features = ["stm32-usbd"] }
panic-itm = "0.4.2"
