[package]
name = "source"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
debug = true
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
usb-device = "0.2.9"
usbd-serial = "0.1.1"
usbd-human-interface-device = "0.4.3"
stm32-usbd = "0.6.0"
cortex-m = "0.7.7"
cortex-m-rt = "0.6.15"
embedded-hal = { version = "0.2", features = ["unproven"] }
# stm32f3-discovery = "0.7.0"
stm32f3xx-hal = { version = "0.8.2", features = ["stm32-usbd", "usb", "rt", "stm32f303xc"] }
panic-itm = "0.4.2"
switch-hal = "0.4.0"
lsm303dlhc = "0.2.0"
accelerometer = "0.12.0"
fugit = "0.3"
packed_struct = { version = "0.3.1", default-features = false}
packed_struct_codegen = { version = "0.3.1", default-features = false}

heapless = "0.7.16"
frunk = { version = "0.4", default-features = false }
frunk_core = { version = "0.4.2", default-features = false } 