[package]
authors = [
    "Jorge Aparicio <jorge@japaric.io>",
    "Christopher J. McClellan <chris.mcclellan203@gmail.com>",
    "Wink Saville <wink@saville.com",
]
edition = "2018"
name = "aux5"
version = "0.2.0"

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "0.6.14"
stm32f3-discovery = "0.7.0"
stm32f3xx-hal = { version = "0.7.0", features = ["stm32-usbd"] }
panic-itm = "0.4.2"
usb-device = "0.2.9"
usbd-serial = "0.1.1"
